# open-automation

./: .browserlistrc  .browserslistrc  .editorconfig  .env.example  .eslintignore  .eslintrc.yml  .giosavebhRsgR  .gitignore  Makefile.nph  OZW_Log.txt  README.md  Test.js  addDevice.php  app.js  beacon.php  cam.html  command.php  config.json  connection_manager.py  database.js  device_info.json  fetch.php  fetch_last.php  ffmpeg.sh  fileMap.js  gateway (copy).js  gateway.js  gateway.js.bacl  gateway.js.bak  gateway.js.del  gateway.js.save  gateway.js.save.1  gateway.old.js  gateway.sh  gateway2.js  gateway_del.js  gateway_old.js  gateway_temp.js  generate-code-graphs.sh  get_mobile.php  (+38 more)
.well-known/acme-challenge/: IfKCyqnGl43eLRzNb-JQnAoZyykdLmGM-Ur0T4eSyN0  iaxQwyd6BJvNw0gZd6iMmWMItkGcl_ajtaii6PuRZ_8  yAnP8Jg9Q0v3d1trE_ki3B1zRze1nDvifD0nQkxNc2Y
apache/camera/: nph-mjprox  nph-mjprox.new
apache/php/: set_device_info.php  update_device_info.php
assets/: config-userfrosting.php
assets/controllers/: AccountController.php
back/: README.md  index.html_back  main.js
back/css/: style2.css
back/js/: app.js
back/mjpeg-proxygrab-1.2/: INSTALL  README  nph-mjgrab  nph-mjprox
back/php/: beacon.php  fetch.php  fetch_last.php
back/templates/: tabs.html
camera/: Makefile  cgictest.cgi  curl_test.c  nph-mjgrab  nph-mjgrab.c  nph-mjprox  nph-mjprox.c
controllers/: gateway.js  index.js  relay.js
cp/: dhcpcd.conf.ap  hostapd  motion.raspbian  rc.local
files/: Audio  Documents  Motion  Videos  audio  documents  gateway.vbs  huepl  motion.desktop  profile  rc.local  smb.conf  video
gateway/: README.md  admin.js  config.json  connection.js  database.js  index.js  socket.js  utils.js
gateway/devices/: alarm.js  camera.js  camera.js-bak  camera.js-temp  camera.js.save  index.js  lights.js  media.js  thermostat.js  zwave.js
html/: set_mobile.php  style.css
html/css/: style.css
html/templates/: tab-account.html  tab-dash.html
install/: install.sh
install/files/: default.motion  motion.conf  thread1.conf  thread2.conf
js/: controllers.js  ng-socket-io.js  services.js
mjpeg-proxygrab-1.2/: Makefile  cgictest.c  cgictest.cgi  curl_test  nph-mjgrab  nph-mjgrab.c  nph-mjprox  nph-mjprox.c
mjpeg-proxygrab-1.2/cgic205/: capture  cgictest.cgi
mjpeg-proxygrab-1.2/mjpeg-proxygrab-1.2/: Makefile  nph-mjgrab  nph-mjprox
motion/: motion  motion-mmalcam-both.conf  motion.conf
node/: gateway.js  media-server.js  server.js
node_modules-broke/diskspace/: test.js
node_modules-working/openzwave-shared/: Dockerfile
node_modules_temp/accepts/: package.json
node_modules_temp/any-promise/: package.json
node_modules_temp/arraybuffer.slice/: package.json
node_modules_temp/asn1/: package.json
node_modules_temp/assert-plus/: package.json
node_modules_temp/asynckit/: package.json
node_modules_temp/aws4/: package.json
node_modules_temp/axios/: package.json
node_modules_temp/backo2/: package.json
node_modules_temp/balanced-match/: package.json
node_modules_temp/base64-url/: package.json
node_modules_temp/basic-auth/: package.json
node_modules_temp/basic-auth-connect/: package.json
node_modules_temp/batch/: package.json
node_modules_temp/better-assert/: package.json
node_modules_temp/blob/: package.json
node_modules_temp/body-parser/: package.json
node_modules_temp/brace-expansion/: package.json
node_modules_temp/bson/: package.json
node_modules_temp/buffer-crc32/: package.json
node_modules_temp/bytes/: package.json
node_modules_temp/callsite/: package.json
node_modules_temp/camelcase/: package.json
node_modules_temp/caseless/: package.json
node_modules_temp/chalk/: package.json
node_modules_temp/co-body/: package.json
node_modules_temp/co-read/: package.json
owncloud/: version.php
php/: beacon.php  command.php  device_info.php  error_log  fetch.php  fetch_last.php  get_mobile.php  set_address.php  set_addresses.php  set_device_info.php  set_mobile.php  set_token.php
public/: addDevice.php  fetch.php  index.html  lights.html  main.js  test.html
public (copy)/: index.html
public_old/: index (copy).html  index.html
public_w/: test.html
relay/: ca.crt  cert.csr  certificate.pem  config.json  database.js  index.js  private.key  server.crt  server.key.passphrase  settings.json  socket.js  stream.js  utils.js  website.js
screenshots/: .~lock.system overview.odg#  system overview.odg
sensors/: gb.py
server/: client-api.js  client-connection.js  constants.js  database.js  device-relay.js  device-server.js  devices.js  gateway-server.js  http-server.js  index.js  notifications.js  service.routes.js  socket-server.js  socket.js  stream-relay.js  stream.js  utilities-server.js  utils.js  website.js  website.routes.js  website.setup.js  websocket-server.js  websocket.js
source/libaacplus-2.0.2/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aacplus-config  aacplus-config.in  aacplus.pc  aacplus.pc.in  aacplus.spec  aacplus.spec.in  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
source/libaacplus-2.0.2/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
source/libaacplus-2.0.2/docs/: aacplusenc.1
source/libaacplus-2.0.2/frontend/: Makefile  Makefile.am  Makefile.in  main.c
source/libaacplus-2.0.2/include/: Makefile  Makefile.am  Makefile.in
source/libaacplus-2.0.2/m4/: acinclude.m4
source/libaacplus-2.0.2/patches/: 0001-move_headers_at_one_place.patch  0002-cfftn-add-fftw3f.patch  0003-faac_compatible.patch  0004-const_where_possible.patch  0005-fix_bitbuff_64bit.patch  0006-add_bitrates.patch  0007-fix_si_bits_dup.patch  0008-enchance_config.patch  0009-move_aac_sbr_enc_2_hdr.patch  0010-use_dynamic_alloc.patch  Makefile  Makefile.am  Makefile.in
source/libaacplus-2.0.2/src/: Makefile  Makefile.am  Makefile.in  aac_ram.h  aacplusenc.c  aacplusenc.h  adts.c  adts.h  libaacplus.sym  sbr_ram.h
src/: App.js  api.js  index.html  index.js  utilities.js
templates/: chat-detail.html
views/: files.html
(+1022 files in other folders)
