EXTRA_DIST = \
0001-move_headers_at_one_place.patch \
0002-cfftn-add-fftw3f.patch \
0003-faac_compatible.patch \
0004-const_where_possible.patch \
0005-fix_bitbuff_64bit.patch \
0006-add_bitrates.patch \
0007-fix_si_bits_dup.patch \
0008-enchance_config.patch \
0009-move_aac_sbr_enc_2_hdr.patch \
0010-use_dynamic_alloc.patch
